@@ -1,0 +1,20 @@
+#!/bin/sh
+
+sudo apt-get install -y \
+    autoconf \
+    bison \
+    cmake \
+    gcc \
+    libmodule-scandeps-perl \
+    libnauty2-dev \
+    libparse-yapp-perl \
+    libtool \
+    make \
+    moreutils \
+    perl \
+    python3-dev \
+    python3-setuptools \
+    python-is-python3 \
+    python-setuptools \
+    swig \
+;
