@@ -15,6 +15,7 @@ cod-tools (unreleased)
           '_chemical_name_mineral' CIF data items from input files to output.
     - dependency installers for Fedora 37 and Fedora 38.
     - dependency installer for Debian 12.
+    - dependency installer for Ubuntu 22.04.
     - COD::Spacegroups::Lookup::COD:
     - three more non-standard space group settings:
         - H-M symbols: 'P 4 21 2 (a-1/4,b+1/4,c)', 'C 2 2 21 (a,b,c+1/4)',
